--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 fastapi
 uvicorn
-sqlalchemy
+databases
 pydantic
-passlib[bcrypt]
-python-multipart
-aiofiles
-python-jose
+jose
+httpx
+supabase
+python-dotenv
